src/components/Portfolio/Portfolio.module.scss
.portfolio__title {
  color: #eef3ff;
  font-size: 48px;
  font-weight: 600;
  margin: 125px 0 65px;
}

.portfolio__categoriesList {
  display: flex;
  justify-content: space-between;
}

.portfolio__category {
  box-shadow: 8px 15px 29px rgba(23, 27, 44, 0.41);
  box-sizing: border-box;
  align-content: center;
  padding: 10px 29px;
  height: 49px;
  border-radius: 7px;
  font-size: 24px;
  color: #eef3ff;
  cursor: pointer;
  transition: 0.3s;
  margin-bottom: 52px;
  background: none;
  border: none;
  &:hover {
    transform: translateY(-5px);
    background: #292936;
  }
  &_active {
    background: #2d76f9;
    transform: translateY(-5px);
    &:hover {
      background: #2d76f9;
    }
  }
}

.caseList {
  display: flex;
  justify-content: flex-start;
  flex-wrap: wrap;
}

.case {
  margin-bottom: 21px;
  margin-left: 38px;
  width: 378px;
  height: 378px;
  box-sizing: border-box;
  background: center center/cover no-repeat;
  display: flex;
  justify-content: end;
  align-items: flex-start;
  padding: 19px 13px;
  border-radius: 12px;
  &:nth-child(1) {
    margin-left: 0;
  }
  &:nth-child(4n) {
    margin-left: 0;
  }
  div {
    background: url("../../assets/icons/case-label.svg") center center/cover
      no-repeat;
    width: 128px;
    height: 128px;
    display: flex;
    align-items: center;
    justify-content: center;
    box-sizing: border-box;
    padding-right: 5px;
    text-align: center;
    span {
      font-size: 24px;
      font-weight: 600;
      color: #fff;
    }
  }
}

